# data-governance-quality-framework

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
contracts/: customers.yml  orders.yml
dags/: governance_pipeline_dag.py
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/macros/: test_freshness_sla.sql  test_schema_contract.sql
dbt_project/models/marts/: fct_order_summary.sql
dbt_project/models/staging/: stg_customers.sql  stg_orders.sql
dbt_project/tests/: assert_order_total_positive.sql
src/: config.py
src/api/: app.py
src/api/routes/: contracts.py  governance.py  health.py  quality.py
src/contracts/: __init__.py  parser.py  registry.py  validator.py
src/db/: __init__.py  session.py
src/db/migrations/: init.sql
src/governance/: __init__.py  alerts.py  dashboard.py  reporter.py
src/models/: __init__.py  contract.py  governance.py  quality.py
src/quality/: __init__.py  engine.py  freshness.py  great_expectations.py  soda_checks.py
tests/: conftest.py
tests/test_api/: test_routes.py
tests/test_contracts/: test_parser.py  test_registry.py  test_validator.py
tests/test_quality/: test_engine.py  test_freshness.py  test_great_expectations.py
