[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-governance-quality-framework"
version = "1.0.0"
description = "Automated data quality gates with contract enforcement, freshness SLAs, and governance checks"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "pydantic>=2.6.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "sqlalchemy>=2.0.25,<3.0.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "great-expectations>=0.18.0,<1.0.0",
    "soda-core-postgres>=3.3.0,<4.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "python-json-logger>=2.0.7,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
    "structlog>=24.1.0,<25.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "ruff>=0.2.0,<1.0.0",
    "mypy>=1.8.0,<2.0.0",
    "types-PyYAML>=6.0.0,<7.0.0",
    "types-psycopg2>=2.9.0,<3.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing --cov-fail-under=80"
